--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "ejected-ui",
   "version": "0.1.0",
-  "private": true,
+  "description": "A bare-bones Create-React-App that has been ejected",
   "dependencies": {
     "@babel/core": "7.6.0",
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -127,7 +125,7 @@
     ],
     "watchPlugins": [
       "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
+      "jest-watch-typeahead/testate"
     ]
   },
   "babel": {
