--- a/package.json
+++ b/package.json
@@ -3,61 +3,79 @@
   "version": "0.1.0",
   "description": "A bare-bones Create-React-App that has been ejected",
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@babel/core": "7.6.4",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-react-jsx-self": "^7.2.0",
+    "@babel/plugin-transform-react-jsx-source": "^7.5.0",
+    "@bit/flavioespinoza.exemplar-ui.button": "^0.0.4",
+    "@bit/flavioespinoza.exemplar-ui.card": "0.0.3",
+    "@bit/flavioespinoza.exemplar-ui.card-quick": "0.0.6",
+    "@bit/flavioespinoza.exemplar-ui.css.app": "^0.0.1",
+    "@bit/flavioespinoza.exemplar-ui.css.index": "^0.0.1",
+    "@bit/flavioespinoza.exemplar-ui.css.material-dashboard-pro-react": "^0.0.1",
+    "@bit/flavioespinoza.exemplar-ui.forms": "^0.0.1",
+    "@bit/flavioespinoza.exemplar-ui.select-styles": "0.0.1",
+    "@bit/flavioespinoza.exemplar-ui.signup-form": "^0.0.4",
+    "@bit/flavioespinoza.exemplar-ui.views.select-styles": "0.0.4",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@svgr/webpack": "4.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
+    "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
+    "css-loader": "3.2.0",
     "dotenv": "^8.1.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.5.1",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-flowtype": "4.3.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "file-loader": "4.2.0",
+    "fs-extra": "8.1.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
+    "is-wsl": "^2.1.1",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.3",
     "ololog": "^1.1.149",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "request": "^2.88.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "sass-loader": "8.0.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "2.1.3",
     "ts-pnp": "1.1.4",
-    "url-loader": "2.1.0",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.1.1",
+    "url-loader": "2.2.0",
+    "webpack": "4.41.1",
+    "webpack-dev-server": "3.8.2",
+    "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
@@ -132,5 +150,22 @@
     "presets": [
       "react-app"
     ]
+  },
+  "bit": {
+    "env": {
+      "compiler": "bit.envs/compilers/react@1.0.2"
+    },
+    "componentsDefaultDirectory": "components/{namespace}--{name}",
+    "saveDependenciesAsComponents": true,
+    "packageManager": "yarn",
+    "resolveModules": {
+      "modulesDirectories": [
+        "src"
+      ],
+      "aliases": {
+        "@jss": "src/assets/jss",
+        "@css": "src/assets/css"
+      }
+    }
   }
 }
